solid/src/main/java/io/github/hustonic/example/solid/i/good/Payment.java
package io.github.hustonic.example.solid.i.good;

/**
 * @author Huston
 */
public interface Payment {

    void pay(Order order);

}
